# deep-learning

./: .gitignore  README.md  pyproject.toml
notebooks/: exp_finetune-llm.ipynb  openrouter-init.ipynb  sota-playground-openrouter.ipynb
notebooks/data/: openrouter-models.json
notebooks/playground/: azure.ipynb  huggingface.ipynb  langgraph.ipynb
notes/: autotelic-ai.md
website/: _config.yml  index.md
